--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.6.5",
     "fractional": "^1.0.0",
-    "regenerator-runtime": "^0.13.7"
+    "regenerator-runtime": "^0.13.7",
+    "uniqid": "^5.2.0"
   }
 }
